/**
 * You can use echo as starter project.
 */

syntax = "proto3";
package title;

option go_package="title/titlepb";

/**
 * That service is use to manage and get access to title informations it offer
 * search functionalities to retreives movies, series, episode information and ther
 * association with file contain on a peer. Information can  
 */
service TitleService {

  	// One request followed by one response
	

}